fixing overflow issue

--- a/styles/resourcers.css
+++ b/styles/resourcers.css
@@ -5,6 +5,7 @@
   }
   
   .resources-container {
+    overflow-y: hidden;
     background: white;
     padding: 200px;
     border-radius: 8px;
